@@ -6,6 +6,7 @@
    * `shark/sh01_corvette`: have the pilot jump in from the same system as the player
    * `minerva/kex03`: have mission claim the crimson gauntlet to prevent unwanted spawns
    * `dvaered/gauntlet`: have mission claim the system if it can, but not fail if it can't
+   * `trader/trader_escort`: player can only escort one group of traders at a time
    * Fixed some typos and revised writing
 
 * 0.11.3
